--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+    padding: 15px;
+}
+
+header input {
+    display: inline-block;
+    font-size: 32px;
+    font-weight: 600;
+    font-style: italic;
+    background: none;
+    outline: none;
+    border: none;
+    appearance: none;
+}
+
+header:before {
+    content: '/r/';
+    display: inline-block;
+    font-size: 32px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.articles article {
+    padding: 30px 15px;
+}
+
+.articles article a {
+    text-decoration: none;
+}
+
+.articles article h3 {
+    color: #323232;
+}
+
+.articles article:nth-child(2n) {
+    background-color: #f3f3f3;
 }
